--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
-description: '似曾相识'
+title: 湛蓝的调色板
+subtitle: お願いどうか覚めないでよ
+description: "青く滲む 青く滲む 綺麗に / 浅渗湛蓝 纵使青涩 难掩绮丽"
 keywords:
-author: Taranaki Neko
+author: YiniTara
 language: zh-cn
 timezone: ''
 
