--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
-    "hexo-prism-plugin": "^2.3.0",
+    "hexo-lazyload-image": "^1.0.12",
+    "@ada87/hexo-prism-plugin": "^2.3.0",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-jade": "^0.5.0",
     "hexo-renderer-marked": "^5.0.0",
