--- a/_config.yml
+++ b/_config.yml
@@ -147,6 +147,6 @@ prism_plugin:
   line_number: true 
 
 lazyload:
-  enable: true
+  enable: false
   onlypost: false # optional
   loadingImg: /images/favicon.png # optional eg ./images/loading.gif
