--- a/themes/typography/_config.yml
+++ b/themes/typography/_config.yml
@@ -1,5 +1,5 @@
 title_primary: "湛蓝的调色板" # the bigger text
-title_secondary: "下一首歌应该怎么唱呢？" # the smaller text
+title_secondary: "" # the smaller text
 keywords:
 
 twitter: #username
