修复代码块深色模式问题 替换评论为giscus

--- a/themes/typography/_config.yml
+++ b/themes/typography/_config.yml
@@ -14,7 +14,8 @@ mail:
 # Please do not use the two services at the same time.
 livere: # [data-uid] on livere.com
 disqus: # [short_name] on disqus.com
-dove: true # For fun ONLY. Set to true to 'disable' comments on your site.
+dove: # For fun ONLY. Set to true to 'disable' comments on your site.
+giscus: true
 
 # Set true to show the page indicator.
 showPageCount: true
