--- a/_config.yml
+++ b/_config.yml
@@ -143,7 +143,7 @@ feed:
 # For syntax highlighting
 prism_plugin:
   mode: 'preprocess'
-  theme: 'default'
+  theme: 'duotone-dark'
   line_number: true 
 
 lazyload:
