--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: 湛蓝的调色板
 subtitle: 
 description: "青く滲む 青く滲む 綺麗に / 浅渗湛蓝 纵使青涩 难掩绮丽"
 keywords:
-author: Taranakienko
+author: TaraYini
 language: zh-cn
 timezone: 'Asia/Shanghai'
 
