添加网站信息（折叠） && 主动交换链接

--- a/themes/typography/_config.yml
+++ b/themes/typography/_config.yml
@@ -1,5 +1,5 @@
 title_primary: "湛蓝的调色板" # the bigger text
-title_secondary: "" # the smaller text
+title_secondary: # the smaller text
 keywords:
 
 twitter: taranakineko
