修复 RSS 不提供全文的 Bug

--- a/_config.yml
+++ b/_config.yml
@@ -133,9 +133,9 @@ tag_generator:
 feed:
   type: atom
   path: atom.xml
-  limit: 20
+  limit: 0
   hub:
-  content:
+  content: true
   content_limit: 140
   content_limit_delim: ' '
 
