--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "hexo clean",
     "deploy": "hexo deploy",
     "server": "hexo server",
+    "start": "hexo server",
     "test": "hexo clean && hexo g && hexo s"
   },
   "hexo": {
