--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ url: https://nekoq.eu.org
 permalink: posts/:year:month:day/:hash.html
 permalink_defaults:
 pretty_urls:
-  trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
-  trailing_html: true # Set to false to remove trailing '.html' from permalinks
+  trailing_index: false # Set to false to remove trailing 'index.html' from permalinks
+  trailing_html: false # Set to false to remove trailing '.html' from permalinks
 
 # Directory
 source_dir: source
