--- a/themes/typography/_config.yml
+++ b/themes/typography/_config.yml
@@ -9,7 +9,7 @@ instagram: #username
 github: taranakineko
 telegram:
 mastodon: https://mstdn.social/@TaranakiNeko
-mail:
+mail: #test
 
 # Choose the comment service according to your need.
 # Please do not use the two services at the same time.
