--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,8 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
+  - '*.html'
+  - '*.js'
 
 # Writing
 new_post_name: ":year-:month-:day :title.md" # File name of new posts
