--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "hexo-lazyload-image": "^1.0.12",
     "hexo-reference": "^1.0.4",
     "hexo-renderer-ejs": "^2.0.0",
-    "hexo-renderer-jade": "^0.5.0",
     "hexo-renderer-marked": "^5.0.0",
+    "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^0.0.3"
