--- a/themes/typography/package.json
+++ b/themes/typography/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo 'No tests' && exit",
-    "build": "node-sass raw/scss -o source/css --output-style compressed && postcss source/css -u autoprefixer -r --no-map",
+    "build": "node-sass raw/scss -o source/css --output-style compressed && postcss source/css -u autoprefixer -r",
     "scss-compile": "npm run build",
     "watch": "node-sass -w raw/scss -o source/css"
   },
@@ -24,12 +24,12 @@
     "url": "https://github.com/SumiMakito/hexo-theme-typography/issues"
   },
   "homepage": "https://github.com/SumiMakito/hexo-theme-typography/README.md",
+  "devDependencies": {},
   "dependencies": {
-    "autoprefixer": "^9.2.0",
-    "node-sass": "^7.0.3",
-    "postcss": "^7.0.5",
-    "postcss-cli": "^6.0.0",
-    "scss-compile": "^0.1.7",
+    "autoprefixer": "^10.4.13",
+    "node-sass": "^8.0.0",
+    "postcss": "^8.4.19",
+    "postcss-cli": "^10.0.0",
     "yamljs": "^0.3.0"
   }
 }
