--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hexo-generator-category-enhance": "^0.1.6",
     "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^2.0.0",
+    "hexo-generator-sitemap": "^3.0.1",
     "hexo-generator-tag": "^1.0.0",
     "hexo-lazyload-image": "^1.0.12",
     "hexo-reference": "^1.0.4",
