--- a/themes/typography/_config.yml
+++ b/themes/typography/_config.yml
@@ -8,7 +8,7 @@ weibo: #username/id
 instagram: #username
 github: taranakineko
 telegram: taranaki_neko
-mastodon: https://mstdn.social/@TaranakiNeko
+mastodon: https://alive.bar/@TaranakiNeko
 mail: #test
 
 # Choose the comment service according to your need.
