部分非常小的修改
 - 开启图片懒加载
 - about 页删除原有内容
 - commit 添加 defer
 - remixicon css min
 - others 页修改

--- a/_config.yml
+++ b/_config.yml
@@ -149,9 +149,9 @@ prism_plugin:
   line_number: true 
 
 lazyload:
-  enable: false
-  onlypost: false # optional
-  loadingImg: "https://nekoq.eu.org/images/favicon.png" # optional eg ./images/loading.gif
+  enable: true
+  onlypost: true # optional
+  loadingImg: # optional eg ./images/loading.gif
 
 sitemap:
   path: sitemap.xml
