--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,14 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
-  - '*.html'
-  - '*.js'
+  - "shorten.html"
+  - "robots.txt"
+  - "test.txt"
+  - "server.json"
+  - "404.html"
+  - "favicon.ico"
+  - "static/**"
+  - "cdn/**"
 
 # Writing
 new_post_name: ":year-:month-:day :title.md" # File name of new posts
