about 侧边栏内容增加

--- a/source/_data/widgets.yml
+++ b/source/_data/widgets.yml
@@ -11,7 +11,7 @@ toc:
     layout: toc
     list_number: false
     min_depth: 2
-    max_depth: 5
+    max_depth: 6
 
 tagcloud:
   layout: tagcloud
@@ -26,3 +26,9 @@ tagcloud:
   start_color: '#a8a8a8' # 开始的颜色。您可使用十六进位值（#b700ff），rgba（rgba(183, 0, 255, 1)），hsla（hsla(283, 100%, 50%, 1)）或 颜色关键字。此变量仅在 color 参数开启时才有用。
   end_color: '#595959'  # 结束的颜色。您可使用十六进位值（#b700ff），rgba（rgba(183, 0, 255, 1)），hsla（hsla(283, 100%, 50%, 1)）或 颜色关键字。此变量仅在 color 参数开启时才有用。
   show_count: false # 显示每个标签的文章总数
+
+ghuser:
+  layout: ghuser
+  username: taranakineko # your github login username
+  avatar: true # show avatar or not
+  menu: true # show menu or not
