--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -143,4 +143,4 @@ my_friends:
       url: https://krau.top
       avatar: https://krau.top/photo/avatar/avatar.jpg
       description: "年轻，就要折腾"
-      screenshot: /static/friends/krau.png
+      screenshot: /static/friends/krau.webp
