--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 湛蓝的调色板
 avatar: https://nekoq.eu.org/static/images/avatar.png
-subtitle: ''
+subtitle: 'All the best.'
 description: "青く滲む 青く滲む 綺麗に / 浅渗湛蓝 纵使青涩 难掩绮丽"
 keywords:
 author: TaranakiNeko
