--- a/_config.stellaris.yml
+++ b/_config.stellaris.yml
@@ -165,24 +165,24 @@ style:
       button: '#ff8c00' # 按钮颜色
       hover: '#ff8c00' # 按钮高亮颜色
     light:
-      theme: '#ff8c00' #主体颜色
-      background: '#f3f3f3 radial-gradient(#f9f6ef 75%, #f3f3f3 100%) no-repeat fixed' # 背景颜色
-      mix: '#f9f6ef' # '#eff4f9' # 浅色背景颜色
-      block: '#f3f3f3' # 块背景颜色
+      theme: '#ff8c00' # 主体颜色
+      background: '#f3f3f3 radial-gradient(#f9f6ef 75%, #f3f3f3 100%) no-repeat fixed' # 网页背景颜色
+      mix: '#f9f6ef' # 浅色背景颜色
+      block: '#EEF0F2' # 块背景颜色
       card: '#fbfbfd' # 卡片背景颜色
       title: '#000' # 标题文本颜色
       text: '#1a1a1a' # 正文文本颜色
       code: 'black' # 行内代码颜色
     dark:
-      theme: '#ff8c00'
+      theme: '#ff8c00' # 主体颜色
       mix: '#35341a' #'#313438' # 深色背景颜色
-      background: '#202020 radial-gradient(#35341a 25%, #202020 100%) no-repeat fixed' # 背景颜色
-      background-mobile: black # 移动端深色背景（OLED调成纯黑可以省电）
-      block: '#2B2F33' # 块背景颜色
+      background: '#202020 radial-gradient(#35341a 25%, #202020 100%) no-repeat fixed' # 网页背景颜色
       card: '#454330' # 卡片背景颜色
+      block: '#2B2F33' # 块背景颜色
       title: '#fff' # 标题文本颜色
       text: '#eee' # 正文文本颜色
       code: '#eee' # 行内代码颜色
+      background-mobile: black # 移动端深色背景（OLED调成纯黑可以省电）
   animated_avatar:
     animate: auto # auto, always
     background: https://imgsrc.baidu.com/forum/pic/item/960a304e251f95caaf1452608c177f3e66095207.jpg
