--- a/_config.stellaris.yml
+++ b/_config.stellaris.yml
@@ -40,6 +40,7 @@ breadcrumb:
 
 ######## Article ########
 article:
+  outdate_month: 24
   # 如果没有指定 excerpt 和 description，将自动取多长的内容作为文章摘要？
   auto_excerpt: 150
   # 分类颜色
