--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -149,3 +149,8 @@ my_friends:
       avatar: https://avatars.githubusercontent.com/u/61108540
       description: "Everyone can be the light in the darkness."
       screenshot: /static/friends/huige.webp
+    - title: "Nofated's Blog"
+      url: https://blog.nofated.win
+      avatar: https://cdn.nofated.win/avatar/256
+      description: "Forever you will be in my heart."
+      screenshot: /static/friends/nof.png
