--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^0.0.3",
-    "node-fetch": "^2.6.12"
+    "html-react-parser": "^5.0.6",
+    "node-fetch": "^2.6.12",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
