--- a/_config.stellaris.yml
+++ b/_config.stellaris.yml
@@ -1,9 +1,10 @@
 ### hexo-theme-stellaris
 
-######## head tags ########
-open_graph:
-  enable: true
-  twitter_id: taranakineko # for open_graph meta
+######## head ########
+head:
+  open_graph:
+    enabled: true
+  twitter_id: taranakineko
 
 
 sidebar:
@@ -192,6 +193,11 @@ style:
   codeblock:
     scrollbar: 4px
     highlightjs_theme: https://cdn.bootcdn.net/ajax/libs/highlight.js/11.6.0/styles/atom-one-light.min.css
+  font_face: "'Inter var', 'Noto Color Emoji'"
+  custom_font_css:
+    # 自定义字体
+    enabled: true
+    css: "https://s1.hdslb.com/bfs/static/jinkela/long/font/regular.css"
 
 default:
   avatar: /images/avatar.svg
@@ -211,3 +217,24 @@ api_host:
   ghapi: https://r.ydz1.gq/https://api.github.com
   ghraw: https://www.githubs.cn/raw-githubusercontent
   gist: https://r.ydz1.gq/https://gist.github.com
+
+######## 自定义插件 ########
+inject:
+  head:
+    - '<meta name="theme-color" media="(prefers-color-scheme: dark)" content="#202020"></meta>'
+    - '<link rel="stylesheet" href="/css/inter.css"></link>'
+  script:
+    - '<script async defer data-website-id="80e637e6-9cdd-4675-a19d-519785bdb3a8" src="https://umami.nekoq.eu.org/script.js" data-do-not-track="true" data-domains="taranakineko.pages.dev,nekoq.eu.org"></script>'
+  # script:
+  #   # 使用 HTML 语法
+  #   - '<script src="https://example.com/my_script.js" data-no-instant="true"></script>'
+  #   # data-no-instant 为 InstantClick 属性，决定某脚本在页面切换时是否重新加载
+  #   # 如果此脚本只需要加载一次（比如添加全局对象），那么为 true
+  #   # 如果此脚本每页都需要重复加载（比如编辑页面元素或需要使用 window.onload），那么为 false
+  # head:
+  #   # 使用 HTML 语法
+  #   - '<meta name="key" content="value"></meta>'
+  #   - '<link rel="stylesheet" href="/css/1.css"></link>'
+  # 由于 Stylus 的特性，暂不支持 inject CSS
+  # 如果要使用自定义 CSS，请在 _source/css 下创建 css 文件
+  # 之后使用上文的 head 来引入
