--- a/_config.stellaris.yml
+++ b/_config.stellaris.yml
@@ -15,7 +15,7 @@ sidebar:
     post: '[最新](/)'
     archive: '[文章](/archives)'
     links: '[友链](/links)'
-    homepage: '[Homepage](https://nekoq.cyou)'
+    homepage: '[Homepage](https://nekoq.top)'
     #about: # '[关于](/about/)'
 
   widgets:
@@ -69,7 +69,7 @@ comments:
     js: https://unpkg.com/@waline/client@v2/dist/waline.js
     css: https://unpkg.com/@waline/client@v2/dist/waline.css
     # Waline server address url, you should set this to your own link
-    serverURL: https://waline.nekoq.cyou/.netlify/functions/comment # waline 地址
+    serverURL: https://waline.nekoq.top/.netlify/functions/comment # waline 地址
     # If false, comment count will only be displayed in post page, not in home page
     commentCount: true
     # Pageviews count, Note: You should not enable both `waline.pageview` and `leancloud_visitors`.
