一些忘记了的修改
  - update theme
  - 代码块那块改用 highlight 了，上个主题用的 @ada87/hexo-prism-plugin
    到这主题就忘记丢掉了

--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ marked:
 relative_link: false
 future: true
 highlight:
-  enable: false
+  enable: true
   line_number: true
   auto_detect: false
   tab_replace: ''
@@ -150,7 +150,6 @@ feed:
   content_limit: 140
   content_limit_delim: ' '
 
-# For syntax highlighting
 # For syntax highlighting
 prism_plugin:
   mode: 'preprocess'
