fix fancybox 无法使用的问题

--- a/_config.stellaris.yml
+++ b/_config.stellaris.yml
@@ -128,8 +128,8 @@ plugins:
   # fancybox
   fancybox:
     enable: true
-    js: /cdn/js/fancybox.umd.js
-    css: /cdn/css/fancybox.css
+    js: /js/fancybox.umd.js
+    css: /css/fancybox.css
     #selector: .swiper-slide img,.vcontent img:not(.vemoji),article.content :not(div.article-footer) img # 多个选择器用英文逗号隔开
     selector: .swiper-slide img, .vcontent img:not(.vemoji) # 多个选择器用英文逗号隔开
   # swiper
