--- a/_config.yml
+++ b/_config.yml
@@ -124,6 +124,7 @@ plugin:
   - hexo-asset-image
   - hexo-prism-plugin
   - hexo-toc
+  - hexo-reference
   # ... other plugins you'd like to enable
 
 # Generate archive page
