我要在 Mastodon 上证明这个链接是我的，使链接旁有✔
thank @lzc256 的验证方法

--- a/_config.stellaris.yml
+++ b/_config.stellaris.yml
@@ -228,7 +228,8 @@ api_host:
 inject:
   head:
     - '<meta name="theme-color" media="(prefers-color-scheme: dark)" content="#202020"></meta>'
-    - '<link rel="stylesheet" href="/css/inter.css"></link>'
+    - '<link rel="stylesheet" href="/css/inter.css">'
+    - '<link rel="me" href="https://alive.bar/@TaranakiNeko">'
   script:
     - '<script async defer data-website-id="80e637e6-9cdd-4675-a19d-519785bdb3a8" src="https://umami.nekoq.eu.org/nya" data-do-not-track="true" data-domains="taranakineko.pages.dev,nekoq.eu.org,blog.nekoq.top"></script>'
   # script:
