🔧 [fix] 修复 InstantClick 版本问题

--- a/_config.stellaris.yml
+++ b/_config.stellaris.yml
@@ -145,7 +145,7 @@ plugins:
   ## optional plugins ##
   # preload
   instant_click:
-    js: https://fastly.jsdelivr.net/npm/instantclick@3.1.0-2/dist/instantclick.min.js
+    js: /js/instantclick.min.js
 
   # image lazyload
   # https://www.npmjs.com/package/vanilla-lazyload
